--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-aria/visually-hidden": "3.8.21",
     "@react-types/shared": "3.28.0",
     "clsx": "2.1.1",
+    "dagre": "^0.8.5",
     "framer-motion": "11.15.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
