--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@heroui/use-theme": "2.1.6",
     "@react-aria/visually-hidden": "3.8.21",
     "@react-types/shared": "3.28.0",
+    "@types/recharts": "^1.8.29",
     "clsx": "2.1.1",
     "dagre": "^0.8.5",
     "framer-motion": "11.15.0",
@@ -31,6 +32,7 @@
     "react-dom": "18.3.1",
     "react-router-dom": "6.23.0",
     "reactflow": "^11.11.4",
+    "recharts": "^2.15.3",
     "tailwind-variants": "0.3.0",
     "tailwindcss": "3.4.16"
   },
