--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroui/button": "2.2.17",
+    "@heroui/card": "^2.2.25",
     "@heroui/code": "2.2.12",
     "@heroui/dropdown": "2.3.17",
     "@heroui/input": "2.4.17",
@@ -27,6 +28,7 @@
     "clsx": "2.1.1",
     "dagre": "^0.8.5",
     "framer-motion": "11.15.0",
+    "lucide-react": "^0.546.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.23.0",
